2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
        (get_mount_point_for_device):
        (should_volume_be_ignored):
	Really make sure we ignore stuff outside /media (#520851)

2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
        (get_disc_name):
	Translate disc names.
	
        * hal/ghalvolume.c:
        (g_hal_volume_new):
	Don't automount gphoto volumes.

2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>

	* programs/gvfs-mount.c: ANSIfication
	* daemon/gvfsbackendnetwork.c: Same.

2008-03-07  Christian Kellner  <gicmo@gnome.org>

	* daemon/soup-input-stream.c: Since G_SEEK_END is not supported
	at the moment immediately return FALSE without aborting the
	the soup message.

2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>

	* daemon/gvfsreadchannel.c,
	* daemon/gvfswritechannel.c:
	Fix format specifiers here.

2008-03-07  Kjartan Maraas  <kmaraas@gnome.org>

	* client/httpuri.c: Remove unused vars.
	* daemon/gvfsbackenddav.c: Remove a couple
	of unused variables.

2008-03-07  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Initialize error variable to NULL. (#519035)

2008-03-06  David Zeuthen  <davidz@redhat.com>

	* hal/ghalvolumemonitor.c:
	(_g_unix_mount_point_guess_should_display),
	(should_be_hidden_according_to_etc_fstab),
	(should_volume_be_ignored), (should_drive_be_ignored),
	(update_drives), (update_volumes):
	Avoid showing volumes from /etc/fstab if the mount point is one
	that should not be displayed to the user (#520851)

2008-03-07  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Only ask for common properties and don't use allprop.

2008-03-06  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	Correctly set the content types and the icon correclty. (#518679)
	Also don't add the If-None-Matcher header for now since
	early apache versions don't like it. We need to be smart about
	that later.
